# AppOpt

./: .gitattributes  .gitignore  .gitmodules  AppOpt.c  AppOpt改版特色.md  FPS_EBPF_INTEGRATION.md  FRAME_ANALYZER_INTEGRATION.md  README.md  README_FRAME_ANALYZER.md  build_ebpf_kernel.sh  build_frame_analyzer.bat  build_frame_analyzer.sh  build_frame_analyzer_wsl.sh  build_module.sh  integrate_frame_analyzer.bat  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts  proguard-rules.pro  release.jks
fps_monitor/: README.md  ebpf_fps.c  ebpf_fps.h  ebpf_fps_libbpf_unused.c  ebpf_fps_new.c  fps_fallback.c  fps_fallback.h
fps_monitor/aya/: Cargo.toml
fps_monitor/aya/aya/src/sys/: netlink.rs
gradle/: libs.versions.toml
magisk_module/: applist.conf  customize.sh  module.prop  rules.sh  sepolicy.rule  service.sh  system.prop
modules_update/: AppOpt.json  changelog.md
native_daemon/: AppOpt.c  calibration.c  config.c  core.c  daemon_main.c  daemon_socket.c  foreground_monitor.c  foreground_monitor.h  fps.c  process_tracker.c  (+2 more)
native_daemon/daemon_rs/: Cargo.toml
native_daemon/daemon_rs/src/: calibration.rs  fps.rs  main.rs
native_daemon/daemon_rs/src/calibration_core/: config_write.rs  history.rs  loop.rs  policy.rs  preamble.rs  procfs.rs  rule_format.rs  rules.rs  session.rs  topology.rs
native_daemon/daemon_rs/src/daemon_core/: affinity.rs  app_state.rs  cli.rs  config.rs  control_socket.rs  entry.rs  loop.rs  preamble.rs  process_tracker.rs  procfs.rs  rule_health.rs  rule_syntax.rs  scan.rs  wildcard.rs
native_daemon/daemon_rs/src/fps_core/: binder.rs  command.rs  fallback.rs  monitor.rs  preamble.rs  socket.rs
(+150 files in other folders)
