[workspace]
members = [
    "aya",
    "aya-obj",
]
resolver = "2"

[workspace.package]
authors = ["Aya Contributors"]
edition = "2024"
homepage = "https://aya-rs.dev"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aya-rs/aya"
rust-version = "1.87.0"

[workspace.dependencies]
assert_matches = { version = "1.5.0", default-features = false }
bitflags = { version = "2.2.1", default-features = false }
bytes = { version = "1", default-features = false }
hashbrown = { version = "0.17.0", default-features = false }
libc = { version = "0.2.105", default-features = false }
log = { version = "0.4", default-features = false }
nix = { version = "0.31.1", default-features = false }
object = { version = "0.39", default-features = false }
once_cell = { version = "1.20.1", default-features = false }
rbpf = { version = "0.4.0", default-features = false }
rstest = { version = "0.26.1", default-features = false }
scopeguard = { version = "1.2.0", default-features = false }
tempfile = { version = "3", default-features = false }
thiserror = { version = "2.0.3", default-features = false }

[workspace.lints.clippy]
all = "warn"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
