[package]
name = "appopt_daemon_rs"
version = "0.1.0"
edition = "2021"

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
appopt-ebpf-bridge = { path = "../fps_monitor/appopt_ebpf_bridge" }
libc = "0.2"

[profile.release]
panic = "abort"
strip = true
lto = "thin"
codegen-units = 1
